# hmf

./: #.travis.yml#  .bumpversion.cfg  .coverage  .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .project  .pydevproject  .readthedocs.yml  .travis.yml  AGENTS.md  CHANGELOG.rst  CLAUDE.md  CONTRIBUTING.rst  CONTRIBUTORS.rst  INSTALLATION.rst  LICENSE.rst  LICENSE.txt  README  README.rst  __version.py  agents.md  benchmarks.py  bump  changethelog.py  coverage.txt  hmf_cfg.toml  hmf_dndm.txt  hmf_m.txt  hmf_sigma.txt  install.sh  make_dev_version.sh  pyproject.toml  requirements.txt  requirements_dev.txt  ruff_failures.txt  setup.cfg  setup.py  (+2 more)
.ci/: install_deps.sh
.github/: dependabot.yml  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug.md  bug_report.md  feature_request.md  question.md
.github/PULL_REQUEST_TEMPLATE/: feature.md
.github/workflows/: auto-merge-deps.yml  auto-merge-precommit.yml  bump_version.yaml  check-build.yml  labeler.yml  merge-me.yaml  merge-to-dev.yaml  pre_commit.yaml  publish-to-pypi.yaml  publish-to-test-pypi.yaml  release-draft.yml  tag-release.yaml  test_suite.yaml  warnings-tests.yaml
ci/: install_deps.sh  tests.yaml
development/: README.rst  analytic_filter.ipynb  find_radiation_threshold.py  growth_factor_integration.ipynb  halofit_testing.ipynb  hmf_z.py
development/Plots/: .gitignore
docs/: Makefile  api.rst  attribution.rst  conf.py  developing.rst  environment.yaml  faq.rst  index.rst  installation.rst  quickstart.rst  requirements.txt  tutorials.rst  versioning.rst
docs/_build/doctrees/: api.doctree  cosmo.doctree  cosmography.doctree  environment.pickle  fit.doctree  fitting_functions.doctree  hmf.doctree  index.doctree  intro.doctree  tools.doctree
docs/_build/doctrees/api_docs/: cosmo.doctree  fitting_functions.doctree  hmf.doctree  tools.doctree  transfer.doctree
docs/_build/html/: .buildinfo  api.html  cosmo.html  cosmography.html  fit.html  fitting_functions.html  genindex.html  hmf.html  index.html  intro.html  np-modindex.html  objects.inv  py-modindex.html  search.html  searchindex.js  tools.html
docs/_build/html/_modules/: hmf.html  index.html
docs/_build/html/_modules/hmf/: cosmo.html  cosmography.html  fitting_functions.html  hmf.html  tools.html  transfer.html
docs/_build/html/_sources/: api.txt  hmf.txt  index.txt
docs/_build/html/_sources/api_docs/: fitting_functions.txt  tools.txt  transfer.txt
docs/_build/html/api_docs/: cosmo.html  fitting_functions.html  hmf.html  tools.html  transfer.html
docs/api_docs/: cosmo.rst  hmf.rst
docs/examples/: broad_overview.ipynb  change_mass_definition.ipynb  deal_with_cosmology.ipynb  deal_with_cosmology.rst  fitting.ipynb  plugins_and_extending.ipynb  your_first_plot.ipynb
docs/technical/: colossus_comparison.rst  growth_factors.rst  index.rst
docs/templates/: class.rst  component-module.rst  modules.rst
examples/: example_run_config.toml  hmf-fit.config
hmf/: Distances.py  Perturbations.py  SetupFunctions.py  __init__.py  _cache.py  _framework.py  _utils.py  cosmo.py  cosmography.py  filters.py  fit.py  fitting_functions.py  functional.py  growth_factor.py  halofit.py  hankel_transform.py  hmf.py  hod.py  hod_propertystyle.py  integrate_hmf.py  profiles.py  sample.py  tools.py  transfer.py  transfer_models.py  units.py  wdm.py
hmf/.fitting/: fit.py
hmf/_internals/: __init__.py  _cache.py  _framework.py
hmf/alternatives/: __init__.py  wdm.py
hmf/cosmology/: __init__.py  cosmo.py  growth_factor.py
hmf/density_field/: __init__.py  filters.py  halofit.py  transfer.py  transfer_models.py
hmf/fitting/: __init__.py  cli_tools.py  cli_tools.py.bak  fit.py
hmf/halos/: __init__.py  mass_definitions.py
hmf/helpers/: __init__.py  functional.py  sample.py
hmf/mass_function/: __init__.py  fitting_functions.py  hmf.py  integrate_hmf.py
nose/: test_genmf.py
nose/data/: README
scripts/: accuracy_test.py  benchmarks.py  code_comparison.py  hmf  hmf-fit  hmf-fit.py  transfer_diff.py  transfer_limits.py
src/hmf/: __init__.py  _cli.py
src/hmf/_internals/: __init__.py  _cache.py  _framework.py  _utils.py
src/hmf/alternatives/: __init__.py  wdm.py
src/hmf/cosmology/: __init__.py  cosmo.py  growth_factor.py
src/hmf/density_field/: __init__.py  filters.py  halofit.py  transfer.py  transfer_models.py
src/hmf/fitting/: __init__.py  cli_tools.py
src/hmf/halos/: __init__.py  mass_definitions.py
src/hmf/helpers/: __init__.py  cfg_utils.py  functional.py  sample.py
src/hmf/mass_function/: __init__.py  fitting_functions.py  hmf.py  integrate_hmf.py
tests/: _test_fit.py  conftest.py  power  test_cache.py  test_cli.py  test_cosmo.py  test_fcoll.py  test_filters.py  test_fit.py  test_fits.py  test_fitting_functions_extra.py  test_framework.py  test_functional.py  test_genmf.py  test_growth.py  test_halofit.py  test_hmf.py  test_integrate_hmf.py  test_limits.py  test_mdef.py  test_sample.py  test_transfer.py  test_transfer_models.py  test_utils.py  test_wcdm.py  test_wdm.py  transfer
tests/data/: Jenkins_0  Jenkins_0_camb  Jenkins_0_hmf  Jenkins_10  Jenkins_2  Jenkins_20  Jenkins_2_camb  Jenkins_2_hmf  PS_0  PS_0_camb  PS_0_hmf  PS_10  PS_2  PS_20  PS_2_camb  PS_2_hmf  Reed03_0  Reed03_0_camb  Reed03_0_hmf  Reed03_10  Reed03_2  Reed03_20  Reed03_2_camb  Reed03_2_hmf  Reed07_0  Reed07_0_camb  Reed07_0_hmf  Reed07_10  Reed07_2  Reed07_20  Reed07_2_camb  Reed07_2_hmf  ST_0  ST_0_camb  ST_0_hmf  ST_10  ST_2  ST_20  ST_2_camb  ST_2_hmf  (+12 more)
