[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[project]
name = "hmf"
description = "A halo mass function calculator"
requires-python = ">=3.12"
authors = [{name = "Steven Murray", email = "murray.steveng@gmail.com"}]
license = "MIT"
urls = {Documentation = "https://hmf.readthedocs.org"}

# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = [
    "Development Status :: 6 - Mature",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy"
]
dynamic = ["version"]

dependencies = [
    "numpy>=1.6.2",
    "scipy>=0.12.0",
    "astropy>=1.1",
    "deprecation",
    "click",
    "toml>=0.10.1",
    "rich",
    "cached_property",
    "camb>=1.0.0"
]

[project.optional-dependencies]
docs = [
    "Sphinx>=1.7.5",
    "numpydoc>=0.8.0",
    "nbsphinx"
]

tests = [
    "coverage>=4.5.1",
    "pytest>=3.5.1",
    "pytest-cov>=2.5.1",
    "mpmath>=1.0.0",
    "colossus>=1.2.1",
    "halomod>=1.4.6",
    "numba",
]

dev = [
    "hmf[docs,tests]",
    "ruff",
    "pre-commit",
]
cosmo = [
    "colossus>=1.2.1"
]
fit = [
    "emcee>=3.0"
]
all = [
    "hmf[dev,cosmo,fit]"
]

[project.scripts]
hmf = "hmf._cli:main"

[tool.pytest.ini_options]
addopts = [
    "--cov=hmf",
    "--cov-report=term-missing",
    "--verbose"
]
norecursedirs = [
    "dist",
    "build",
    ".tox"
]
testpaths = [
    "tests"
]



[tool.ruff]
exclude = [
  "development/*.ipynb",
]
line-length=100
target-version="py312"

[tool.ruff.lint]
extend-select = [
  "UP",   # pyupgrade
  "E",    # pycodestyle
  "W",    # pycodestyle warning
  "F",    # pyflakes
  "C90",  # mccabe complexity
  "I",    # isort
  "N",    # pep8-naming
  "D",    # docstyle
  # "ANN"   # type annotations
  "B",    # bugbear
  "A",    # builtins
  "C4",   # comprehensions
  "DTZ",  # datetime
  "FA",   # future annotations
  "PIE",  # flake8-pie
  "T",    # print statements
  "PT",   # pytest-style
  "Q",    # quotes
  "SIM",  # simplify
  "PTH",  # use Pathlib
  "ERA",  # kill commented code
  "NPY",  # numpy-specific rules
  "PERF", # performance
  # "FURB", # refurb
  "RUF",  # ruff-specific rules
  "RET",  # return statements
  "RSE",  # exception raises
  "TRY201", # verbose raise
]
ignore = [
    # "DTZ007",   # use %z in strptime
    # "DTZ001",   # require tzinfo in datetime
    # "B008",     # do not performa function call in argument defaults
    # "PTH207",   # allow glob.glob() because when we use it, it's necessary
    # "A003",     # class attribute shadowing builtins
    # "RUF009",   # don;e perform function call in dataclass defaults
    "N806",  # Variable name should be lower case. We have some single-letter variables that make more sense to be caps.
    "N803",  # Argument name should be lowercase. Scientific notation (N, L, R, Mmin, etc.) - changing would break API.
    "N801",  # Class name should use CapWords. Names like Watson_FoF, EH_BAO are part of the public API.
    "N802",  # Function name should be lowercase. Test functions often use capitals for scientific notation.
    "D401",  # First line should be in imperative mood -- cached_properties and parameter descriptors don't fit this.
    "B018",  # Picks up "useless" expressions that are properties.
    # "N815",
    # "N807",  # Allow method names to start and end with __
    # "RUF012", # mutable class attributes annotation
    # # The rest should be un-commented when possible...
    # "PTH123",
    # "PT011",
    # "A005",  # module name shadows builtin
    # "RUF067",  # allow defining new variables in __Init__ files
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "D1",
    "T",     # print statements
    "N802",  # function names - test functions often use capitals for scientific notation
    "PT011", # pytest.raises too broad - acceptable in tests
    "PT012", # pytest.raises with multiple statements - acceptable in tests
    "PT030", # pytest.warns too broad - acceptable in tests
]
"docs/conf.py" = [
    "A",  # conf.py can shadow builtins
    "ERA",
    "DTZ",
]
"**/*.ipynb" = [
    "T201", "DTZ", "D", "PTH119", "ERA"
]

[tool.ruff.lint.pydocstyle]
convention = 'numpy'
property-decorators = [
    "pytest.fixture",
    "property",
    "cached_property",
    "cached_quantity",
    "parameter",
]

[tool.ruff.lint.mccabe]
max-complexity = 21
